# heyloaf

./: .env.example  .gitignore  CLAUDE.md  biome.json  justfile  package.json  pnpm-lock.yaml
apps/web/: CLAUDE.md  components.json  package.json  tsconfig.json  vite.config.ts
apps/web/src/: routeTree.gen.ts
apps/web/src/components/: app-layout.tsx  audit-history.tsx  confirm-dialog.tsx  localized-date-range-filter.tsx  page-header.tsx  sidebar.tsx
apps/web/src/hooks/: use-api.ts  use-date-locale.ts
apps/web/src/lib/: api.ts  auth.ts  format-currency.ts  format-date.ts  i18n.ts  query.ts  scale.ts  status-badge.ts
apps/web/src/locales/: en.json  tr.json
apps/web/src/routes/: __root.tsx  _authenticated.tsx  index.tsx  login.tsx
apps/web/src/routes/_authenticated/: categories.tsx  channels.tsx  contacts.$contactId.tsx  contacts.tsx  dashboard.tsx  invoices.tsx  notifications.tsx  orders.$orderId.tsx  orders.tsx  pos.tsx  production.tsx  products.tsx  recipes.tsx  reports.tsx  shifts.tsx  stock.tsx  super-admin.tsx  transactions.tsx
apps/web/src/routes/_authenticated/settings/: audit.tsx  company.tsx  currencies.tsx  general.tsx  index.tsx  notifications.tsx  payment-methods.tsx  pos-terminals.tsx  price-lists.$listId.tsx  price-lists.tsx  scale.tsx  stock.tsx  users.tsx
core/: CLAUDE.md  Cargo.toml
core/crates/api/: Cargo.toml
core/crates/api/src/: main.rs  openapi.rs  routes.rs  state.rs
core/crates/api/src/extractors/: mod.rs  validated.rs
core/crates/api/src/handlers/: audit.rs  auth.rs  categories.rs  company.rs  contacts.rs  currencies.rs  dashboard.rs  health.rs  invoices.rs  marketplace_channels.rs  mod.rs  notifications.rs  orders.rs  payment_methods.rs  pos_terminals.rs  price_lists.rs  production.rs  products.rs  recipes.rs  reports.rs  shifts.rs  stock.rs  super_admin.rs  transactions.rs  uploads.rs  users.rs
core/crates/api/src/middleware/: auth.rs  company_guard.rs  language.rs  mod.rs  rate_limit.rs  rbac.rs  super_admin.rs
core/crates/cli/: Cargo.toml
core/crates/cli/src/: main.rs
core/crates/cli/src/commands/: create_company.rs  create_migration.rs  create_user.rs  mod.rs  seed.rs
core/crates/common/: Cargo.toml
core/crates/common/src/: config.rs  crypto.rs  errors.rs  i18n.rs  lib.rs  telemetry.rs  types.rs  validation.rs
core/crates/dal/: Cargo.toml
core/crates/dal/src/: lib.rs  pool.rs
core/crates/dal/src/migrations/: 00001_initial_schema.sql  00002_full_schema.sql  00003_order_number_seq.sql  00004_per_company_counters.sql  00005_order_items_returned_quantity.sql  00006_shift_unique_open_index.sql
core/crates/dal/src/models/: audit.rs  category.rs  company.rs  contact.rs  currency.rs  invoice.rs  marketplace_channel.rs  notification.rs  order.rs  payment_method.rs  pos_terminal.rs  price_list.rs  price_list_item.rs  product.rs  production_record.rs  production_session.rs  shift.rs  stock.rs  stock_count.rs  stock_movement.rs  transaction.rs  user.rs
core/crates/dal/src/repositories/: audit.rs  category.rs  company.rs  contact.rs  currency.rs  invoice.rs  marketplace_channel.rs  mod.rs  notification.rs  order.rs  payment_method.rs  pos_terminal.rs  price_list.rs  price_list_item.rs  product.rs  production_record.rs  production_session.rs  shift.rs  stock.rs  stock_count.rs  stock_movement.rs  transaction.rs  user.rs
core/crates/services/: Cargo.toml
core/crates/services/src/: audit_service.rs  lib.rs  notification_service.rs  stock_service.rs
docs/: architecture.md  features.md
docs/plans/: 2026-03-08-initial-setup.md
infrastructure/: docker-compose.yml
