[package]
name = "heyloaf-common"
version = "0.1.0"
edition.workspace = true

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
validator = { workspace = true }
utoipa = { workspace = true }
dotenvy = { workspace = true }

[lints]
workspace = true
