[package]
name = "heyloaf-dal"
version = "0.1.0"
edition.workspace = true

[dependencies]
heyloaf-common = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
utoipa = { workspace = true }

[lints]
workspace = true
