[package]
name = "heyloaf-services"
version = "0.1.0"
edition.workspace = true

[dependencies]
heyloaf-common = { workspace = true }
heyloaf-dal = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
